# basic-e2e

./: .dockerignore  .gitignore  .pre-commit-config.yaml  .pylintrc  Dockerfile  Dockerfile.airflow  README.md  ci.yml  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  deploy_dev.yml  deploy_prod.yml  linting_testing.yml
dags/: dag_generate_forecast.py  dag_ml_pipeline.py  dag_retrain.py  dag_synthetic_data.py  dag_upload_csv_to_postgres.py  synthetic_data_dag.py  synthetic_data_utils.py
models/: time_series_model.pkl
src/: data_processing.py  predict.py  train.py
src/coffee_modeling/: data_processing.py  evaluate.py  forecast.py  predict.py  promote.py  train.py
src/tests/: test_data_processing.py
tests/: test_data_processing.py
