[tool.poetry]
name = "basic-e2e"
version = "0.1.0"
description = "A time series forecasting model for coffee shop sales."
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = ">=3.10"
pandas = "^2.3.1"
scikit-learn = "^1.7.1"
joblib = "^1.5.1"

[tool.poetry.group.dev.dependencies]
pylint = "^3.3.9"
black = "^24.4.2"
pytest = "^8.4.2"
ruff = "^0.5.5"
mypy = "^1.11.0"

[tool.poetry.scripts]
train-model = "src.train:main"

[tool.ruff]
line-length = 88

[tool.ruff.lint]
# Enable the same rules as Pylint, plus the pyupgrade rules.
select = ["E", "F", "W", "I", "B"]
ignore = ["E501", "B010"]

[tool.mypy]
ignore_missing_imports = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"