[project]
name = "basic-e2e"
version = "0.1.0"
description = "A time series forecasting model for coffee shop sales."
readme = "README.md"
authors = [
    {name = "Your Name", email = "you@example.com"}
]
requires-python = ">=3.10"
dependencies = [
    "pandas>=2.3.1,<3.0.0",
    "scikit-learn>=1.7.1,<2.0.0",
    "joblib>=1.5.1,<2.0.0"
]

[project.optional-dependencies]
dev = [
    "pylint>=3.3.9,<4.0.0",
    "black>=24.4.2,<25.0.0",
    "pytest>=8.4.2,<9.0.0",
    "ruff>=0.5.5,<1.0.0",
    "mypy>=1.11.0,<2.0.0",
    "pre-commit>=4.3.0,<5.0.0"
]

[project.scripts]
train-model = "src.train:main"

[tool.poetry]
name = "basic-e2e"
version = "0.1.0"
description = "A time series forecasting model for coffee shop sales."
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = ">=3.10"
pandas = "^2.3.1"
scikit-learn = "^1.7.1"
joblib = "^1.5.1"

[tool.poetry.group.dev.dependencies]
pylint = "^3.3.9"
black = "^24.4.2"
pytest = "^8.4.2"
ruff = "^0.5.5"
mypy = "^1.11.0"
pre-commit = "^4.3.0"

[tool.poetry.scripts]
train-model = "src.train:main"

[tool.ruff]
line-length = 88

[tool.ruff.lint]
# Enable the same rules as Pylint, plus the pyupgrade rules.
select = ["E", "F", "W", "I", "B"]
ignore = ["E501", "B010"]

[tool.mypy]
ignore_missing_imports = true
disallow_untyped_defs = false
disallow_untyped_calls = false
check_untyped_defs = false
warn_unused_ignores = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
