[project]
name = "basic-e2e"
version = "0.1.0"
description = "A time series forecasting model for coffee shop sales."
readme = "README.md"
authors = [
    { name = "Your Name", email = "you@example.com" }
]
requires-python = ">=3.10"
dependencies = [
    "pandas>=2.3.1,<3.0.0",
    "scikit-learn>=1.7.1,<2.0.0",
    "joblib>=1.5.1,<2.0.0",
    "mlflow>=3.5.1",
    "boto3>=1.40.59",
    "psycopg2-binary>=2.9.11",
    "pytest>=8.4.2",
]

[project.optional-dependencies]
dev = [
    "pylint>=3.3.9,<4.0.0",
    "black>=24.4.2,<25.0.0",
    "pytest>=8.4.2,<9.0.0",
    "ruff>=0.5.5,<1.0.0",
    "mypy>=1.11.0,<2.0.0",
    "pre-commit>=4.3.0,<5.0.0"
]

[project.scripts]
train-model = "coffee_modeling.train:main"

[tool.setuptools.packages.find]
where = ["src"]
include = ["coffee_modeling"]

[tool.ruff]
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B"]
ignore = ["E501", "B010"]

[tool.mypy]
ignore_missing_imports = true
warn_unused_ignores = true

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[dependency-groups]
dev = [
    "mypy>=1.18.2",
    "pylint>=3.3.9",
]
